--- a/tables.html
+++ b/tables.html
@@ -14,11 +14,9 @@
 
     <table border = "1">
         <caption><strong>Table of fruits</strong></caption>
-        <thead>
-            <tr> <!-- redica 1 -->
-                <td><strong>Fruit</strong></td>
-                <td><strong>Price</strong></td>
-            </tr>
+        <thead> <!-- redica 1 -->
+            <td><strong>Fruit</strong></td>
+            <td><strong>Price</strong></td>
         </thead>
 
         <tbody>
@@ -32,10 +30,9 @@
             </tr>
         </tbody>
 
-        <tfoot>
+        <tfoot> <!-- redica 3 -->
             <td><strong>Total</strong></td>
             <td><strong>$0.75</strong></td>
-
         </tfoot>
 
     </table>
