new files added

--- a/forms-2.html
+++ b/forms-2.html
@@ -39,14 +39,28 @@
 
     <p>Dropdown list exaple:</p>
     <form>
-        <label for="colors">Select a Color:</label>
-        <select id="colors" name="selected_color">
+        <label>Select a Color:</label>
+        <select>
             <option value="red">Red</option>
-            <option value="green">Green</option>
             <option value="yellow">Yellow</option>
         </select>
+
         <input type="submit" value="Submit">
     </form>
+
+
+    <p><form>
+        <label>Month:
+            <input type="month" size="25">
+        </label>
+    </form></p>
+
+    <p><form>
+        <label>Enter a number between 0 and 7</label>
+        <input type="number" size="25" min="0" max="7"><br>
+        <input type="time" size="25">
+    </form></p>
+
     
 </body>
 </html>
