--- a/(Un)ordered-list.html
+++ b/(Un)ordered-list.html
@@ -13,8 +13,14 @@
         <li>Item 3</li>
     </ul>
 
+    <ul style="list-style :square;">
+        <li>Item 1</li>
+        <li>Item 2</li>
+        <li>Item 3</li>
+      </ul>
+
     <!--creating ordered list-->
-    <ol>
+    <ol style="color: brown;">
         <li>first</li>
         <li>second</li>
         <li>third</li>
