--- a/homework1.html
+++ b/homework1.html
@@ -8,7 +8,7 @@
 <body>
     <p><h1> Homework1 </h1></p>
 
-    <form>
+    <form method="post" action="https://www.tripadvisor.com/Restaurants-g612443-c6-Prilep_Pelagonia_Region.html">
         <table border="1">
             <caption><strong>Place your orders here!</strong></caption>
             <thead>
