--- a/exaples.html
+++ b/exaples.html
@@ -6,6 +6,8 @@
     <title>Examples</title>
 </head>
 <body>
+    <!-- first task -->
+
     <h1>Feedback Form</h1>
     <p>Please fill out this form to help us improve our site.</p>
 
@@ -69,5 +71,55 @@
         <input type="submit" value="Submit">
         <input type="reset" value="Clear"></p>
     </form>
+
+
+
+    <!-- second task -->
+
+
+    <h1>Table Example: Spanning Rows and Columns</h1>
+    <table border="1">
+        <caption>A more complex sample table</caption>
+        <tr aria-rowspan="3"> <!--row1-->
+            <td rowspan="2">
+                <img src="c:\Users\krist\OneDrive\Desktop\Temporary\FEIT- V semestar\Основи на Web програмирање\code-examples\Code_Examples\Code_Examples\ch02\camel.gif">
+            </td>
+            <th colspan="4">
+                <strong>Camelid comparison Approximate as of 6/2011</strong>
+            </th>
+        </tr>
+
+
+        <tr><!--row2-->
+            <td>
+               <strong># of humps</strong> 
+            </td>
+            <td>
+                <strong>Indigenous region</strong> 
+             </td>
+             <td>
+                <strong>Spits?</strong> 
+             </td>
+             <td>
+                <strong>Produces wool?</strong> 
+             </td>
+        </tr>
+
+        <tr> <!--row3-->
+            <th><strong>Camels (bactrian)</strong></th>
+            <td>2</td>
+            <td>Africa/Asia</td>
+            <td>Yes</td>
+            <td>Yes</td>
+        </tr>
+
+        <tr>
+            <th><strong>Llamas</strong></th>
+            <td>1</td>
+            <td>Andes Mountains</td>
+            <td>Yes</td>
+            <td>Yes</td>
+        </tr>
+    </table>
 </body>
 </html>
